# ScroomRuler

./: CMakeLists.txt  README.md  builder.ui  builder.ui~  gui.glade~  main.cpp
ruler/: CMakeLists.txt
ruler/src/: builder.ui  builder.ui~  main.cc  ruler.cc  ruler.hh
ruler/test/: main.cc  ruler-tests.cc
src/: builder.ui~  main.cpp  ruler.cc  ruler.hh
